<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MoviesDetailActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
            android:id="@+id/tv_item_title"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="22dp"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:text="@string/title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.064" />

            <ImageView
            android:id="@+id/line1"
            android:layout_width="90dp"
            android:layout_height="5dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/first_line"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.003"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_title"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@color/colorPrimaryDark" />

            <ImageView
            android:id="@+id/line2"
            android:layout_width="90dp"
            android:layout_height="5dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/second_line"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.062"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line1"
            app:layout_constraintVertical_bias="0.009"
            app:srcCompat="@color/colorPrimaryDark" />

            <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="171dp"
            android:layout_height="221dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/image_poster"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line2"
            app:layout_constraintVertical_bias="0.082"
            app:srcCompat="@color/design_default_color_primary" />

            <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="248dp"
            android:layout_height="44dp"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_item_photo"
            android:baselineAligned="false">

            <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/vote_average"
            android:src="@drawable/ic_stars_pink_24dp" />

            <TextView
            android:id="@+id/tv_item_voteAverege"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vote_average"
            android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/vote_count"
            android:src="@drawable/ic_people_pink" />

            <TextView
            android:id="@+id/tv_item_voteCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vote_count"
            android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/languange"
            android:src="@drawable/ic_language_pink_24dp" />

            <TextView
            android:id="@+id/tv_item_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/languange"
            android:textAlignment="center" />
            </LinearLayout>
            </LinearLayout>


            <TextView
            android:id="@+id/tv_item_overview"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_marginBottom="32dp"
            android:background="@color/colorGrey"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/detail_overview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressDetailMovie"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView2" />

</android.support.constraint.ConstraintLayout>